# johnny-os

./: .gitignore  .gitmodules  LICENSE  README.md  moveit_config_dict.yaml  requirements.txt
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: jekyll-gh-pages.yml
description/xarm6/: xarm6.ros2_control.xacro  xarm6.urdf  xarm6_with_gripper.urdf
docs/: _config.yml  index.md
docs/_sass/color_schemes/: appleseed.scss
launch/: ecosim_base.launch.py  ecosim_base_grid_test.launch.py  lab.launch.py  main.launch.py  simulated_arm.launch.py  simulated_pick_and_place.py  xarm6_moveit_fake.launch.py
param/: ecosim_base.rviz  moveit_config_dict.yaml  xarm6_controllers.yaml
src/interface/amiga_control/: package.xml  setup.py
src/interface/amiga_control/amiga_control/: amiga_control.py
src/interface/gnss_interface/: package.xml  setup.py
src/interface/gnss_interface/gnss_interface/: fix_to_transform_node.py
src/interface/joystick_interface/: package.xml  setup.cfg  setup.py
src/interface/joystick_interface/joystick_interface/: joystick_interface.py
src/interface/linak_controller/: README.md  package.xml  setup.cfg  setup.py
src/interface/linak_controller/config/: LINAK-actuator-v3-1.eds
src/interface/linak_controller/linak_controller/: linak_control.py
src/misc/health_manager/: CMakeLists.txt  package.xml
src/misc/health_manager/config/: params.yaml
src/misc/health_manager/include/health_manager/: health_manager.hpp
src/misc/health_manager/launch/: health_manager.launch.py
src/misc/health_manager/src/: health_manager.cpp  health_manager_node.cpp
src/misc/johnny_description/: CMakeLists.txt  package.xml
src/misc/johnny_description/launch/: description.launch.py
src/misc/johnny_description/meshes/: amiga_chassis_lowpoly.stl
src/misc/johnny_description/urdf/: johnny.urdf.xacro  johnny_macro.urdf.xacro
src/msg/johnny_msgs/: CMakeLists.txt  package.xml
src/msg/johnny_msgs/msg/: FailedChecks.msg  ForestPlan.msg  HealthCheck.msg  PlantingPlan.msg  Seedling.msg  TrajectoryCandidates.msg
src/perception/grid_generation/: CMakeLists.txt  package.xml
src/perception/grid_generation/config/: params.yaml
src/perception/grid_generation/include/grid_generation/: lidar_to_occupancy.hpp
src/perception/grid_generation/launch/: lidar_to_occupancy.launch.py
src/perception/grid_generation/src/: lidar_to_occupancy.cpp  lidar_to_occupancy_node.cpp
src/perception/hole_perception/: package.xml  setup.cfg  setup.py
src/perception/hole_perception/hole_perception/: hole_perception_node.py
src/perception/sensor_processing/: CMakeLists.txt  package.xml  setup.py
src/perception/sensor_processing/config/: params.yaml
src/perception/sensor_processing/include/sensor_processing/: lidar_filter.hpp
src/perception/sensor_processing/sensor_processing/: gnss_processor.py
src/perception/sensor_processing/src/: lidar_filter.cpp  lidar_filter_node.cpp
src/perception/yolov8_detecter/: package.xml  setup.cfg  setup.py
src/perception/yolov8_detecter/launch/: detect.launch.py
src/perception/yolov8_detecter/yolov8_detecter/: detector_node.py
src/planning/arm_planning/: package.xml  setup.py
src/planning/arm_planning/arm_planning/: arm_trajectory_planner.py  inverse_kinematics_tester.py
src/planning/behavior_management/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/planning/behavior_management/config/: params.yaml
src/planning/behavior_management/include/behavior_management/: behavior_manager.hpp
src/planning/behavior_management/launch/: behavior_manager.launch.py
src/planning/behavior_management/src/: behavior_manager.cpp  behavior_manager_node.cpp
src/planning/forest_planning/: package.xml  setup.py
src/planning/forest_planning/forest_planning/: forest_planner.py
src/planning/plant_poses/: goal_pose.py  test_plant_poses.json
src/planning/ros_motion_controller/: package.xml  setup.cfg  setup.py
src/planning/ros_motion_controller/ros_motion_controller/: motion_controller.py  motion_controller_pid.py
src/planning/ros_waypoint/: package.xml  setup.cfg  setup.py
src/planning/ros_waypoint/ros_waypoint/: dubbins_path_generator.py  waypoint_node.py
src/planning/species_info/: species_info.py  speciesplanner.r
src/planning/trajectory_generation/: obstacle_detection.py  package.xml  path_planning.py  setup.cfg  setup.py
src/planning/trajectory_generation/trajectory_generation/: obstacle_detection.py  off_eco_sim_test_version.py  path_planning.py
src/planning/trajectory_planning/: package.xml  setup.py
src/planning/trajectory_planning/trajectory_planning/: planner.py  simple_goal_follower.py  twist_tester.py
src/planning/xarm_control/: package.xml  setup.py
src/planning/xarm_control/xarm_control/: move_joint_example.py  pick_and_place.py  xarm_control.py
