<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hole_perception</name>
  <version>1.0.0</version>
  <description>Detect and localize hole relative to depth camera</description>

  <maintainer email="w@heit.mn">Will Heitman</maintainer>
  <license>MIT</license>

  <depend>std_msgs</depend>
  <depend>johnny_msgs</depend>
  <depend>joy_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
