<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_generation</name>
  <version>1.0.0</version>
  <description>Nodes to find a path based on obstacles detected by lidar point cloud.</description>

  <maintainer email="junyuzhu@andrew.cmu.edu">Junyu (Joyce) Zhu</maintainer>
  <!-- <license>MIT</license> -->

  <depend>johnny_msgs</depend>

  <!-- <export>
    <build_type>ament_python</build_type>
  </export> -->
</package>
